--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,4 @@
 PORT = 3000
 MONGO_DB_URI = mongodb+srv://lhphucth14:3BO0nNx06MbcWKfJ@cluster0.kttst.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET = c/xHbQBH7+ez6Q6LZDgcXX/kUAuic6C2FIb+yMrwmAA=
+FRONTEND_URL = http://localhost:3001
