--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
         "axios": "^1.7.9",
         "classnames": "^2.5.1",
         "dotenv": "^16.4.7",
+        "js-cookie": "^3.0.5",
         "jwt-decode": "^4.0.0",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
