--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
         "@emotion/styled": "^11.14.0",
         "@mui/icons-material": "^6.4.6",
         "@mui/material": "^6.4.6",
+        "@reduxjs/toolkit": "^2.6.1",
         "@tailwindcss/vite": "^4.0.6",
         "axios": "^1.7.9",
         "classnames": "^2.5.1",
