--- a/backend/.env
+++ b/backend/.env
@@ -3,3 +3,5 @@ MONGO_DB_URI = mongodb+srv://lhphucth14:3BO0nNx06MbcWKfJ@cluster0.kttst.mongodb.
 JWT_SECRET = c/xHbQBH7+ez6Q6LZDgcXX/kUAuic6C2FIb+yMrwmAA=
 REFRESH_SECRET = b1575CSwyHD5JlnXUXnadvKIlerdcfr/e8zqUje5lts=
 FRONTEND_URL = http://localhost:3001
+EMAIL_USER=lhphucth14@gmail.com
+EMAIL_PASS=aidi chlm ynwl ezuo
