--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
         "crypto": "^1.0.1",
         "dotenv": "^16.4.7",
         "express": "^4.21.2",
+        "gopd": "^1.0.1",
         "jsonwebtoken": "^9.0.2",
         "mongoose": "^8.3.4",
         "multer": "^1.4.5-lts.2",
