--- a/backend/.env
+++ b/backend/.env
@@ -5,3 +5,7 @@ REFRESH_SECRET = b1575CSwyHD5JlnXUXnadvKIlerdcfr/e8zqUje5lts=
 FRONTEND_URL = http://localhost:3001
 EMAIL_USER=lhphucth14@gmail.com
 EMAIL_PASS=aidi chlm ynwl ezuo
+# FACEBOOK_APP_ID=3925120877739639
+# FACEBOOK_APP_SECRET=a698144f3331575b9ccc501f64623df7
+# FACEBOOK_CALLBACK_URL=http://localhost:3000/api/auth/facebook/callback
+# SESSION_SECRET=10gROLg5eIFcdIPtc/jxzbAxz5t6258qwJKdpVPxi3w=
