--- a/backend/package.json
+++ b/backend/package.json
@@ -8,8 +8,7 @@
     },
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "node index.js",
-        "dev": "nodemon index.js"
+        "start": "nodemon index.js"
     },
     "author": "",
     "license": "ISC",
