add facebook login function

--- a/backend/.env
+++ b/backend/.env
@@ -1,11 +1,11 @@
 PORT = 3000
-MONGO_DB_URI = mongodb+srv://lhphucth14:3BO0nNx06MbcWKfJ@cluster0.kttst.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_DB_URI = mongodb+srv://lhphucth14:3BO0nNx06MbcWKfJ@cluster0.kttst.mongodb.net/?retryWrites=true&w=majority
 JWT_SECRET = c/xHbQBH7+ez6Q6LZDgcXX/kUAuic6C2FIb+yMrwmAA=
 REFRESH_SECRET = b1575CSwyHD5JlnXUXnadvKIlerdcfr/e8zqUje5lts=
 FRONTEND_URL = http://localhost:3001
 EMAIL_USER=lhphucth14@gmail.com
 EMAIL_PASS=aidi chlm ynwl ezuo
-# FACEBOOK_APP_ID=3925120877739639
-# FACEBOOK_APP_SECRET=a698144f3331575b9ccc501f64623df7
-# FACEBOOK_CALLBACK_URL=http://localhost:3000/api/auth/facebook/callback
-# SESSION_SECRET=10gROLg5eIFcdIPtc/jxzbAxz5t6258qwJKdpVPxi3w=
+FACEBOOK_APP_ID=1212736950597008
+FACEBOOK_APP_SECRET=e2c6ec494b1ce469c212a365747bb5ed
+FACEBOOK_CALLBACK_URL=http://localhost:3000/api/auth/facebook/callback
+SESSION_SECRET=10gROLg5eIFcdIPtc/jxzbAxz5t6258qwJKdpVPxi3w=
