--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "license": "ISC",
     "type": "module",
     "dependencies": {
+        "axios": "^1.9.0",
         "bcryptjs": "^3.0.2",
         "cookie-parser": "^1.4.7",
         "cors": "^2.8.5",
@@ -25,6 +26,9 @@
         "mongoose": "^8.3.4",
         "multer": "^1.4.5-lts.2",
         "nodemailer": "^7.0.3",
+        "passport": "^0.7.0",
+        "passport-facebook": "^3.0.0",
+        "passport-facebook-token": "^4.0.0",
         "socket.io": "^4.8.1"
     },
     "devDependencies": {
