--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
         "jwt-decode": "^4.0.0",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
+        "react-facebook-login": "^4.1.1",
         "react-hot-toast": "^2.5.2",
         "react-redux": "^9.2.0",
         "react-router-dom": "^7.1.5",
